{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 907,
  "lineage": "027a0833-853d-9667-c94b-4ebb91a77ada",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "application_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-056729a8869a8ab24",
            "arn": "arn:aws:ec2:ap-southeast-2:809659887358:instance/i-072b6b47a78a05437",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-072b6b47a78a05437",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "naumtest",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-06fce65bd4d65fac4"
              }
            ],
            "primary_network_interface_id": "eni-06fce65bd4d65fac4",
            "private_dns": "ip-10-5-0-214.ap-southeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.5.0.214",
            "public_ip": "3.24.138.159",
            "region": "ap-southeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e5c045c973b08e4e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fdbff3b0016d8980",
            "tags": {
              "Name": "naumtest",
              "createdBy": "it2you-naumtest"
            },
            "tags_all": {
              "Name": "naumtest",
              "createdBy": "it2you-naumtest"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c72969bba9fd7fc5",
              "sg-0dd8c6652645f2805"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.ssh_key",
            "aws_security_group.front_end_sg",
            "aws_security_group.ssh_access",
            "aws_subnet.public_subnet_a",
            "aws_vpc.vpc",
            "data.aws_ami.amazon_linux_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:809659887358:internet-gateway/igw-08fc8ebc0304b0625",
            "id": "igw-08fc8ebc0304b0625",
            "owner_id": "809659887358",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "Public gateway",
              "createdBy": "infra-naumtest/base"
            },
            "tags_all": {
              "Name": "Public gateway",
              "createdBy": "infra-naumtest/base"
            },
            "vpc_id": "vpc-09a456fe564c2cd11"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:809659887358:targetgroup/naumtest-tg/135e49272bd75df4",
            "arn_suffix": "targetgroup/naumtest-tg/135e49272bd75df4",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:809659887358:targetgroup/naumtest-tg/135e49272bd75df4",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "naumtest-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-southeast-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-09a456fe564c2cd11"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:809659887358:targetgroup/naumtest-tg/135e49272bd75df4"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_subnet_routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:809659887358:route-table/rtb-0ddded1df024d4ea0",
            "id": "rtb-0ddded1df024d4ea0",
            "owner_id": "809659887358",
            "propagating_vgws": [],
            "region": "ap-southeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08fc8ebc0304b0625",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public subnet routing table",
              "createdBy": "infra-naumtest/base"
            },
            "tags_all": {
              "Name": "Public subnet routing table",
              "createdBy": "infra-naumtest/base"
            },
            "timeouts": null,
            "vpc_id": "vpc-09a456fe564c2cd11"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_routes_assn_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06b9dff082b483216",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-0ddded1df024d4ea0",
            "subnet_id": "subnet-0fdbff3b0016d8980"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public_subnet_routes",
            "aws_subnet.public_subnet_a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_routes_assn_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08f2cda3e28332494",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-0ddded1df024d4ea0",
            "subnet_id": "subnet-0ee3d96f7c3a14a00"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public_subnet_routes",
            "aws_subnet.public_subnet_b",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "front_end_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:809659887358:security-group/sg-0c72969bba9fd7fc5",
            "description": "Security group for front_end",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c72969bba9fd7fc5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "naumtest-front_end",
            "name_prefix": "",
            "owner_id": "809659887358",
            "region": "ap-southeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG for front_end",
              "createdBy": "it2you-naumtest"
            },
            "tags_all": {
              "Name": "SG for front_end",
              "createdBy": "it2you-naumtest"
            },
            "timeouts": null,
            "vpc_id": "vpc-09a456fe564c2cd11"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "809659887358",
            "id": "sg-0c72969bba9fd7fc5",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:809659887358:security-group/sg-0dd8c6652645f2805",
            "description": "SSH access group",
            "egress": [],
            "id": "sg-0dd8c6652645f2805",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "naumtest-ssh_access",
            "name_prefix": "",
            "owner_id": "809659887358",
            "region": "ap-southeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow HTTP",
              "createdBy": "it2you-naumtest"
            },
            "tags_all": {
              "Name": "Allow HTTP",
              "createdBy": "it2you-naumtest"
            },
            "timeouts": null,
            "vpc_id": "vpc-09a456fe564c2cd11"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "809659887358",
            "id": "sg-0dd8c6652645f2805",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8080,
            "id": "sgrule-3584579779",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-southeast-2",
            "security_group_id": "sg-0c72969bba9fd7fc5",
            "security_group_rule_id": "sgr-0da73072f5382b0cc",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.front_end_sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "front_end_all_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-153787934",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "ap-southeast-2",
            "security_group_id": "sg-0c72969bba9fd7fc5",
            "security_group_rule_id": "sgr-0382762c5f4a11b34",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.front_end_sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "grafana_front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 3000,
            "id": "sgrule-2596803287",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-southeast-2",
            "security_group_id": "sg-0c72969bba9fd7fc5",
            "security_group_rule_id": "sgr-074be55f7271a265c",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.front_end_sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "myapp_front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8000,
            "id": "sgrule-3252016501",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-southeast-2",
            "security_group_id": "sg-0c72969bba9fd7fc5",
            "security_group_rule_id": "sgr-0f88a01927aa02294",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.front_end_sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:809659887358:subnet/subnet-0fdbff3b0016d8980",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.5.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fdbff3b0016d8980",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "809659887358",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "Public subnet A",
              "createdBy": "infra-naumtest/base"
            },
            "tags_all": {
              "Name": "Public subnet A",
              "createdBy": "infra-naumtest/base"
            },
            "vpc_id": "vpc-09a456fe564c2cd11"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "809659887358",
            "id": "subnet-0fdbff3b0016d8980",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:809659887358:subnet/subnet-0ee3d96f7c3a14a00",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.5.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ee3d96f7c3a14a00",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "809659887358",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "Public subnet B",
              "createdBy": "infra-naumtest/base"
            },
            "tags_all": {
              "Name": "Public subnet B",
              "createdBy": "infra-naumtest/base"
            },
            "vpc_id": "vpc-09a456fe564c2cd11"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "809659887358",
            "id": "subnet-0ee3d96f7c3a14a00",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:809659887358:vpc/vpc-09a456fe564c2cd11",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.5.0.0/16",
            "default_network_acl_id": "acl-01d1f33c6bc8d1b62",
            "default_route_table_id": "rtb-08bac723c6ffeb859",
            "default_security_group_id": "sg-0bbe03ecab7be2654",
            "dhcp_options_id": "dopt-01010996800458d8b",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09a456fe564c2cd11",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08bac723c6ffeb859",
            "owner_id": "809659887358",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "naumtest",
              "createdBy": "infra-naumtest/base"
            },
            "tags_all": {
              "Name": "naumtest",
              "createdBy": "infra-naumtest/base"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}